--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,12 @@
+<!----
+* File: app.js
+* Author: Laczkó Bálint
+* Copyright: 2023, Laczkó Bálint
+* Group: Szoft I-2-N
+* Date: 2021-02-23
+* Github: https://github.com/Balint0429/
+* Licenc: GNU GPL
+-->
 <!DOCTYPE html>
 <html lang="hu">
 <head>
@@ -6,10 +15,13 @@
     <title>Triangle</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="style.css">
+    <script src="js/bootstrap.js"></script>
+    <script src="app.js"></script>
 </head>
 <body>
     <div class="container">
-        <h1>Sablon</h1>
+        <h1>Háromszög területszámitás</h1>
+        <h2>Feladat szám</h2>
         <div class="tri_form">
             <div class="mt-3">
                 <label for="base" class="form-label">Alap</label>
@@ -21,12 +33,15 @@
             </div>
             <button id="calclButton" class="btn btn-primary">Számit</button>
             <div class="mt-3">
-                <label for="base" class="form-label">Alap</label>
-                <input type="text" id="" class="form-control">
+                <label for="area" class="form-label">Terület</label>
+                <input type="text" id="area" class="form-control">
             </div>
         </div>
     </div>
-    <script src="js/bootstrap.js"></script>
-    <script src="app.js"></script>
+    <div class="about">
+        * Author: Laczkó Bálint
+        * Copyright: 2023, Laczkó Bálint
+        * Group: Szoft I-2-N    /
+    </div>
 </body>
 </html>
