--- a/src/index.html
+++ b/src/index.html
@@ -7,31 +7,32 @@
 * Github: https://github.com/Balint0429/
 * Licenc: GNU GPL
 -->
+
 <!DOCTYPE html>
 <html lang="hu">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Triangle</title>
-    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="bootstrap.css">
     <link rel="stylesheet" href="style.css">
-    <script src="js/bootstrap.js"></script>
-    <script src="app.js"></script>
 </head>
 <body>
     <div class="container">
         <h1>Háromszög területszámitás</h1>
         <h2>Feladat szám</h2>
-        <div class="tri_form">
+        <div class="triangleForm">
             <div class="mt-3">
-                <label for="base" class="form-label">Alap</label>
+                <label for="base" class="form-label">Alap (cm)</label>
                 <input type="text" id="base" class="form-control">
             </div>
             <div class="mt-3">
-                <label for="base" class="form-label">Magaság</label>
+                <label for="height" class="form-label">Magasság (cm)</label>
                 <input type="text" id="height" class="form-control">
             </div>
-            <button id="calclButton" class="btn btn-primary">Számit</button>
+            
+            <button id="calcButton" class="btn btn-primary mt-3">Számít</button>
+            
             <div class="mt-3">
                 <label for="area" class="form-label">Terület</label>
                 <input type="text" id="area" class="form-control">
@@ -43,5 +44,6 @@
         * Copyright: 2023, Laczkó Bálint
         * Group: Szoft I-2-N    /
     </div>
+    <script src="app.js"></script>
 </body>
 </html>
